--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
     "@expo-google-fonts/roboto": "^0.2.3",
     "@expo-google-fonts/ubuntu": "^0.2.3",
     "expo": "~50.0.14",
+    "expo-app-loading": "^2.1.1",
     "expo-font": "~11.10.3",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
